--- a/public/style.css
+++ b/public/style.css
@@ -1,122 +1,22 @@
-.movie-listing {
-  display: -webkit-box;
-  display: -ms-flexbox;
+@import url('https://fonts.googleapis.com/css2?family=Righteous&display=swap');
+/* Righteous and Lobster are both fun choices */
+
+* {
+  box-sizing: border-box;
+}
+
+body {
+  background-color: rebeccapurple;
+  color: white;
+}
+
+.container {
   display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
-  width: 100%;
-  margin: 0 auto;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
 }
 
-.movie-listing li {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
-  width: 32%;
-  list-style: none;
-  text-align: center;
-  margin: .75rem .75rem .75rem 0;
-  background-color: #f2f5fb;
-  border-radius: 5px;
+h1 {
+  font-family: 'Righteous';
 }
-
-.movie-listing li:hover {
-  background-color: #e2e6f0;
-}
-
-.movie-listing li img {
-  height: 17rem;
-  width: 13rem;
-  margin-bottom: 1rem;
-  margin-top: .75rem;
-}
-
-.search {
-  margin-right: 1rem;
-}
-
-.movie-container {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
-}
-
-.movie-details {
-  margin-left: 1rem;
-}
-
-.votes label {
-  padding-right: 1.25rem;
-  padding-left: .2rem;
-}
-
-.downvote {
-  width: 100px;
-  height: 100px;
-}
-
-.link {
-  color: #343638;
-}
-
-.link:hover {
-  text-decoration: none;
-  color: #3c8ad3;
-}
-
-@media screen and (max-width: 1030px) {
-  .movie-listing li {
-    width: 45%;
-    margin: .75rem auto;
-  }
-}
-
-@media screen and (max-width: 780px) {
-  .movie-listing li {
-    width: 100%;
-    margin: .75rem auto;
-  }
-  .movie-container {
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-    text-align: center;
-    background-color: #e2e6f0;
-    border-radius: 5px;
-    -webkit-box-shadow: 2px grey;
-            box-shadow: 2px grey;
-  }
-  .movie-container div {
-    margin: 1rem;
-  }
-}
-
-@media screen and (max-width: 575px) {
-  .search {
-    margin-left: 1rem;
-  }
-  .footer {
-    position: fixed;
-    left: 1rem;
-    width: 100%;
-  }
-}
-/*# sourceMappingURL=style.css.map */
