style: add search icon and fonts

--- a/public/style.css
+++ b/public/style.css
@@ -1,5 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Righteous&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Raleway&display=swap');
 /* Righteous and Lobster are both fun choices */
+
+:root {
+  --primary-font: 'Raleway', sans-serif;
+}
 
 * {
   box-sizing: border-box;
@@ -8,6 +13,9 @@
 body {
   background-color: rebeccapurple;
   color: white;
+  font-family: var(--primary-font);
+  font-size: 1.25rem;
+  height: 100vh;
 }
 
 .container {
@@ -18,5 +26,57 @@ body {
 }
 
 h1 {
-  font-family: 'Righteous';
+  font-family: 'Righteous', sans-serif;
+  font-size: 3.5rem;
+  margin-top: 0;
+}
+
+.btn {
+  font-family: var(--primary-font);
+}
+
+.footer {
+  position: fixed;
+  bottom: 15px;
+  /* font-family: var(--primary-font); */
+}
+
+.nominations {
+  list-style-type: none;
+}
+
+/* .search input {
+  background-color: #fff;
+  border: 0;
+  font-size: 18px;
+  padding: 15px;
+  height: 50px;
+  width: 50px;
+  transition: width 0.3s ease;
+} */
+
+/* .search button {
+  background-color: #fff;
+  border: 0;
+  cursor: pointer;
+  font-size: 24px;
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 50px;
+  width: 50px;
+  transition: transform 0.3s ease;
+} */
+
+button:focus,
+.input:focus {
+  outline: none;
+}
+
+.search.active input {
+  width: 200px;
+}
+
+.search.active button {
+  transform: translateX(198px);
 }
