--- a/public/style.css
+++ b/public/style.css
@@ -125,4 +125,10 @@ h1 {
   color: rebeccapurple;
   font-weight: bold;
   font-size: 1.75rem;
+  transform: translateY(-100%);
+  transition: transform 0.3s linear;
+}
+
+.banner.show {
+  transform: translateY(0%);
 }
