--- a/public/style.css
+++ b/public/style.css
@@ -15,7 +15,7 @@ body {
   color: white;
   font-family: var(--primary-font);
   font-size: 1.25rem;
-  height: 100vh;
+  height: 100%;
 }
 
 .container {
@@ -90,11 +90,11 @@ h1 {
   flex-wrap: wrap;
 }
 
-#nominations {
+/* #nominations {
   position: fixed;
   right: 5px;
   top: 5px
-}
+} */
 
 #nominations ul {
   list-style-type: none;
@@ -117,7 +117,7 @@ h1 {
   display: flex;
   justify-content: center;
   align-items: center;
-  position: absolute;
+  position: fixed;
   top: 0;
   width: 100vw;
   height: 5vh;
