--- a/public/style.css
+++ b/public/style.css
@@ -22,7 +22,6 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
-  flex-direction: column;
   flex-wrap: wrap;
 }
 
@@ -30,6 +29,10 @@ h1 {
   font-family: 'Righteous', sans-serif;
   font-size: 3.5rem;
   /* margin-top: 0; */
+}
+
+.main {
+  position: relative;
 }
 
 .btn {
@@ -43,9 +46,14 @@ h1 {
 }
 
 .search {
-  position: relative;
+  position: absolute;
+  top: 20vh;
   height: 50px;
   transition: transform 0.3s ease;
+}
+
+.search.active.expand {
+  transform: translate(-150%, -10vh);
 }
 
 .search input {
@@ -88,28 +96,45 @@ h1 {
   list-style-type: none;
   flex-direction: row;
   flex-wrap: wrap;
+  margin-top: 15vh;
 }
 
-/* #nominations {
-  position: fixed;
-  right: 5px;
-  top: 5px
-} */
+#nominations {
+  position: absolute;
+  top: 0;
+  text-align: left;
+}
 
-#nominations ul {
+.list {
   list-style-type: none;
+  text-align: left;
+  transition: transform 0.3s ease;
+}
+
+.list.active {
+  transform: translateX(300px);
 }
 
 .card {
+  position: relative;
+  padding: .75rem;
   margin: 1rem;
-  padding: 1rem;
   background-color: rgb(158, 113, 203);
   border-radius: 5px;
+  width: 220px;
+  height: 350px;
+  animation: fade-in 0.5s linear;
+  text-overflow: ellipsis;
+  overflow: hidden;
+}
+
+.card h4 {
+  margin: 0;
 }
 
 .card img {
-  width: 200px;
-  height: 250px;
+  width: 100%;
+  height: 80%;
   border-radius: 5px;
 }
 
@@ -127,8 +152,36 @@ h1 {
   font-size: 1.75rem;
   transform: translateY(-100%);
   transition: transform 0.3s linear;
+  z-index: 5;
 }
 
 .banner.show {
   transform: translateY(0%);
+}
+
+@keyframes slide-in {
+  from {
+    transform: translateY(-100%);
+  }
+
+  to {
+    transform: translateY(0%);
+  }
+}
+
+@keyframes fade-in {
+  from {
+    opacity: 0;
+  }
+
+  to {
+    opacity: 1;
+  }
+}
+
+@media screen and (min-width: 1100px) {
+  .main {
+    width: 1100px;
+    margin: 0 auto;
+  }
 }
