--- a/docs/style.css
+++ b/docs/style.css
@@ -38,26 +38,12 @@ h1 {
   flex-direction: column;
 }
 
-.btn {
-  font-family: var(--primary-font);
-  font-size: 1.25rem;
-  border: none;
-  border-radius: 5px;
-  background-color: var(--light-blue);
-  color: #fff;
-  padding: .25rem .75rem;
-  margin: 0.25rem;
-  transition: background-color 0.3s ease;
-}
-
-.btn:hover {
-  background-color:rgba(158, 113, 203, 1.0);
-}
-
 .footer {
   position: fixed;
-  bottom: 15px;
-  /* font-family: var(--primary-font); */
+  bottom: 0;
+  background-color: var(--dark-blue);
+  width: 100%;
+  height: 50px;
 }
 
 #prompt {
@@ -120,25 +106,6 @@ h1 {
   margin-top: 10vh;
 }
 
-#nominations {
-  position: absolute;
-  right: 10px;
-  top: 0;
-  text-align: left;
-  transform: translateY(-35%);
-}
-
-.list {
-  list-style-type: none;
-  text-align: left;
-  transform: translateY(-200%);
-  transition: transform 0.3s ease;
-}
-
-.list.active {
-  transform: translateY(0%);
-}
-
 .card {
   position: relative;
   padding: .75rem;
@@ -162,6 +129,45 @@ h1 {
   border-radius: 5px;
 }
 
+.btn {
+  font-family: var(--primary-font);
+  font-size: 1.25rem;
+  border: none;
+  border-radius: 5px;
+  background-color: var(--light-blue);
+  color: #fff;
+  padding: .25rem .75rem;
+  margin: 0.25rem;
+  transition: background-color 0.3s ease;
+}
+
+.btn:hover {
+  background-color:rgba(158, 113, 203, 1.0);
+}
+
+.btn:focus {
+  outline: none;
+}
+
+#nominations {
+  position: absolute;
+  right: 10px;
+  top: 0;
+  text-align: left;
+  transform: translateY(-35%);
+}
+
+.list {
+  list-style-type: none;
+  text-align: left;
+  transform: translateY(-200%);
+  transition: transform 0.3s ease;
+}
+
+.list.active {
+  transform: translateY(0%);
+}
+
 .banner {
   display: flex;
   justify-content: center;
@@ -171,7 +177,7 @@ h1 {
   width: 100vw;
   height: 5vh;
   background-color: rgb(254, 254, 0);
-  color: rebeccapurple;
+  color: var(--light-blue);
   font-weight: bold;
   font-size: 1.75rem;
   transform: translateY(-100%);
