--- a/docs/style.css
+++ b/docs/style.css
@@ -36,7 +36,7 @@ h1 {
 .main {
   /* position: relative; */
   flex-direction: column;
-  margin-bottom: 2rem;
+  margin-bottom: 5rem;
 }
 
 .footer {
@@ -49,7 +49,7 @@ h1 {
 
 #prompt {
   position: relative;
-  top: 10vh;
+  top: 50px;
 }
 
 .search {
@@ -139,7 +139,7 @@ h1 {
   font-family: var(--primary-font);
   font-size: 1.25rem;
   border: none;
-  border-radius: 5px;
+  border-radius: 10px;
   background-color: var(--light-blue);
   color: #fff;
   padding: .2rem .5rem;
@@ -168,10 +168,26 @@ h1 {
 
 #nominations {
   position: absolute;
-  right: 18vw;
+  right: 140px;
   top: 30px;
   text-align: left;
   /* transform: translateY(-88px); */
+}
+
+#nominations div:nth-of-type(1) {
+  position: relative;
+  width: 260px;
+  height: 60px;
+}
+
+#nominations span {
+  position: absolute;
+  right: 5px;
+  top: -10px;
+  background-color: rgb(170, 18, 18);
+  border-radius: 50%;
+  width: 40px;
+  height: 40px;
 }
 
 .list {
