--- a/docs/style.css
+++ b/docs/style.css
@@ -59,7 +59,7 @@ h1 {
 
 .search.active.expand {
   top: 30px;
-  left: 10%;
+  left: 12%;
 }
 
 .search input {
@@ -178,7 +178,7 @@ h1 {
   display: flex;
   flex-direction: column;
   flex-wrap: wrap;
-  right: 3%;
+  right: 10%;
   top: 30px;
   width: 240px;
   text-align: left;
@@ -211,10 +211,10 @@ h1 {
 
 .list {
   list-style-type: none;
-  border-radius: 0px 0px 5px 5px;
+  border-radius: 5px;
   padding: .5rem;
   margin: 0;
-  background-color: var(--light-blue);
+  background-color: rgb(134, 141, 204);;
   opacity: 0;
   transition: opacity 0.3s ease;
 }
@@ -269,5 +269,13 @@ h1 {
   .search-results {
     width: 1600px;
     margin: 0 auto;
+  }
+
+  #nominations {
+    right: 15%;
+  }
+
+  .search.active.expand {
+    left: 15%;
   }
 }
