style: cleanup for submission

--- a/docs/style.css
+++ b/docs/style.css
@@ -192,6 +192,11 @@ h1 {
   font-size: 1.25rem;
   border-radius: 5px;
   margin: 0;
+  background-color: rgb(134, 141, 204);
+}
+
+.nominations.btn:hover {
+  background-color: var(--primary-purple);
 }
 
 #nominations div:nth-of-type(1) {
@@ -210,23 +215,31 @@ h1 {
   height: 40px;
 }
 
-.list {
-  list-style-type: none;
-  border-radius: 5px;
-  padding: .5rem .25rem;
-  margin: 0;
-  z-index: 9;
-  background-color: rgb(134, 141, 204);
+.list-container {
   opacity: 0;
+  z-index: 9;
   transition: opacity 0.3s ease;
 }
 
-.list.active {
+.list-container.active {
   opacity: 1;
+}
+
+.list-container.active + .nominations.btn {
+  border-radius: 0;
+}
+
+.list {
+  list-style-type: none;
+  border-radius: 0 0 5px 5px;
+  padding: .5rem .25rem;
+  margin: 0;
+  background:linear-gradient(rgb(134, 141, 204), rgb(62, 67, 138));
 }
 
 .list .btn {
   margin-left: 0;
+  margin-right: .5rem;
   padding: .25rem .75rem;
 }
 
